--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./style.css" />
     <title>Work Day Scheduler</title>
   </head>
 
@@ -30,7 +30,7 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
-      <div id="hour-9" class="row-time-block">
+      <div id="hour-9" class="time-block">
         <div class="hour col-md-2">9 AM</div>
         <textarea class="col-md-9 description"></textarea>
         <button class="saveBtn col-md-1">
@@ -38,7 +38,7 @@
         </button>      
       </div>
 
-      <div id="hour-10" class="row-time-block">
+      <div id="hour-10" class="time-block">
         <div class="hour col-md-2">10 AM</div>
         <textarea class="col-md-9 description"></textarea>
         <button class="saveBtn col-md-1">
@@ -46,7 +46,7 @@
         </button>      
       </div>
 
-      <div id="hour-11" class="row-time-block">
+      <div id="hour-11" class="time-block">
         <div class="hour col-md-2">11 AM</div>
         <textarea class="col-md-9 description"></textarea>
         <button class="saveBtn col-md-1">
@@ -54,7 +54,7 @@
         </button>      
       </div>
 
-      <div id="hour-12" class="row-time-block">
+      <div id="hour-12" class="time-block">
         <div class="hour col-md-2">12 PM</div>
         <textarea class="col-md-9 description"></textarea>
         <button class="saveBtn col-md-1">
@@ -62,7 +62,7 @@
         </button>      
       </div>
 
-      <div id="hour-1" class="row-time-block">
+      <div id="hour-13" class="time-block">
         <div class="hour col-md-2">1 PM</div>
         <textarea class="col-md-9 description"></textarea>
         <button class="saveBtn col-md-1">
@@ -70,7 +70,7 @@
         </button>      
       </div>
 
-      <div id="hour-2" class="row-time-block">
+      <div id="hour-14" class="time-block">
         <div class="hour col-md-2">2 PM</div>
         <textarea class="col-md-9 description"></textarea>
         <button class="saveBtn col-md-1">
@@ -78,7 +78,7 @@
         </button>      
       </div>
 
-      <div id="hour-3" class="row-time-block">
+      <div id="hour-15" class="time-block">
         <div class="hour col-md-2">3 PM</div>
         <textarea class="col-md-9 description"></textarea>
         <button class="saveBtn col-md-1">
@@ -86,7 +86,7 @@
         </button>      
       </div>
 
-      <div id="hour-4" class="row-time-block">
+      <div id="hour-16" class="time-block">
         <div class="hour col-md-2">4 PM</div>
         <textarea class="col-md-9 description"></textarea>
         <button class="saveBtn col-md-1">
@@ -94,7 +94,7 @@
         </button>      
       </div>
 
-      <div id="hour-12" class="row-time-block">
+      <div id="hour-17" class="time-block">
         <div class="hour col-md-2">5 PM</div>
         <textarea class="col-md-9 description"></textarea>
         <button class="saveBtn col-md-1">
@@ -106,6 +106,6 @@
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-    <script src="./script.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
